<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activies.MeditateActivity">

    <TextView
        android:id="@+id/tvMeditate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/meditate"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/cvCardPlay"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/peace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMeditate"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:id="@+id/layoutDailyCalm"
            android:orientation="horizontal"
            android:background="@drawable/ice"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/tvDailyCalm"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daily_calmness"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:padding="20dp"
                android:textStyle="bold|italic"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="69dp"
                android:id="@+id/ivPlayIcon"
                android:layout_height="49dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/play_icon" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCardPlay">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:id="@+id/cvAll"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/list"
                    android:backgroundTint="@color/primary"
                    android:padding="20dp"
                    android:contentDescription="@string/all"
                    app:cornerRadius="10dp" />

                <TextView
                    android:id="@+id/tvList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/all"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/cvMine"
                android:layout_height="110dp"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="110dp"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                <ImageView
                    android:id="@+id/btnMine"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_margin="3dp"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/heart"
                    android:backgroundTint="@color/primary"
                    android:padding="20dp"
                    app:cornerRadius="10dp" />

                <TextView
                    android:id="@+id/tvMine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/mine"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="@id/btnMine"
                    app:layout_constraintStart_toStartOf="@id/btnMine"
                    app:layout_constraintTop_toTopOf="@id/btnMine" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:id="@+id/cvAngry"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="110dp"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                <ImageView
                    android:id="@+id/btnAngry"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/angry"
                    android:backgroundTint="@color/primary"
                    android:padding="20dp"
                    app:cornerRadius="10dp" />

                <TextView
                    android:id="@+id/tvAnger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/angry"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:id="@+id/cvSleep"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <LinearLayout
            android:layout_height="110dp"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            
            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="3dp"
                android:background="@drawable/sleep"
                android:backgroundTint="@color/primary"
                android:padding="20dp"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/tvSleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/sleep"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:id="@+id/cvAnxious"
            android:layout_height="110dp"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_height="110dp"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="3dp"
                android:background="@drawable/anxious"
                android:backgroundTint="@color/primary"
                android:padding="20dp"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/tvAnxious"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/anxious"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>



        </LinearLayout>


    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMusicList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/ivNext"
        android:layout_width="48dp"
        android:layout_height="53dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cvCardPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toEndOf="@+id/tvMeditate"
        app:srcCompat="@drawable/right" />


</androidx.constraintlayout.widget.ConstraintLayout>