<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeBackActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
    <TextView
        android:id="@+id/tvWelcomeAbby"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/comiiingsoonregular"
        android:text="Welcome Back,"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="163dp"
        android:layout_height="54dp"
        android:fontFamily="@font/comiiingsoonregular"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/tvWelcomeAbby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWelcomeAbby" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPlayCheckIn"
        android:layout_width="00dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#715672"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeAbby">

        <LinearLayout
            android:id="@+id/layoutDailyCalm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="200dp"
                android:id="@+id/ivCheckInPic"
                android:layout_height="130dp"
                app:srcCompat="@drawable/checkin" />

            <Button
                android:id="@+id/btnCheckIn"
                android:layout_width="150dp"
                android:layout_height="54dp"
                android:layout_marginTop="45dp"
                android:backgroundTint="@color/green"
                android:text="@string/check_in"
                android:textSize="20sp"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPlayReflect"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#AA9AAA"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardPlayCheckIn">

        <LinearLayout
            android:id="@+id/layoutReflect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btnReflect"
                android:layout_width="150dp"
                android:layout_height="54dp"
                android:layout_marginTop="45dp"
                android:backgroundTint="@color/green"
                android:text="Reflect"
                android:textSize="20sp"
                app:cornerRadius="15dp" />

            <ImageView
                android:layout_width="200dp"
                android:id="@+id/ivReflect"
                android:layout_height="150dp"
                app:srcCompat="@drawable/reflect" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardPlaySet"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#EED8EE"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardPlayReflect">

        <LinearLayout
            android:id="@+id/layoutSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="200dp"
                android:id="@+id/ivSet"
                android:layout_height="200dp"
                app:srcCompat="@drawable/setpic" />

            <Button
                android:id="@+id/btnSet"
                android:layout_width="150dp"
                android:layout_height="54dp"
                android:layout_marginTop="45dp"
                android:backgroundTint="@color/green"
                android:text="@string/set"
                android:textSize="20sp"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>